--- a/render.yaml
+++ b/render.yaml
@@ -5,5 +5,7 @@ services:
     buildCommand: |
       pip install -r requirements.txt
       python manage.py migrate --noinput
+      python manage.py createsuperuser --noinput || true
     startCommand: gunicorn django_project.wsgi:application
     plan: free
+
