Add render.yaml with auto migrations

--- a/render.yaml
+++ b/render.yaml
@@ -4,8 +4,11 @@ services:
     env: python
     buildCommand: |
       pip install -r requirements.txt
+      python manage.py makemigrations --noinput
       python manage.py migrate --noinput
-      python manage.py createsuperuser --noinput || true
+      python manage.py createsuperuser \
+        --noinput \
+        --username $DJANGO_SUPERUSER_USERNAME \
+        --email $DJANGO_SUPERUSER_EMAIL || true
     startCommand: gunicorn django_project.wsgi:application
     plan: free
-
